Change Log for OpenXava project
===============================

- 'In group' and not 'in group' (the 'in' of SQL) allowed to filter in list, collections and 'My reports'. 
- PDF reports with no data show a page with an informative message instead of an empty report.
- @AssertTrue message can be customized, even values of properties of the current entity can be used.
- When a ConstraintViolationException is thrown the message to the user is obtained from the constraint definition.
- @Size validation annotations produces a more significative mensage.
- Support for multivalue editors with checkboxes.
- Fix: Wrong OpenXava version number when using some third party libraries.
- Long labels in automatic PDF reports can use several lines if needed. 
- Automatic PDF reports use qualified labels for column header, just as list mode.
- Detail line height optimized for automatic PDF reports.
- The combo for adding columns in 'My report' only shows until second level properties by default.
- Order for properties when no @View is defined is consistent for all Java vendors.
- Labels instead of internal names in combo for adding new columns in 'My reports'.
- Fix: Totals in automatic PDF reports use two lines when the number is too large.
- Fix: Little vertical white bar in subcontroller button.
- Subcontrollers are not shown when they have no action.
- Style of subcontrollers improved.
- Subcontrollers behavior improved: now they are closed on clicking again on the button or outside the popup menu. 
- buttonBar.jsp and subButton.jsp files -> java code 1.4.
- Algorithm to adjust columns in PDF reports optimized: right column is better adjusted and columns that not fit are dropped. 
- New icons for customizing list and collections.
- Link to hide filter is in the filter row itself.
- Links to show and hide the filter are only visible in customization mode.
- Width of columns in automatic PDF reports is calculated from the real content, not from declaration.