@@ -133,7 +133,7 @@ reduceQuantity=Reduce quantity
 InvoicePrint=Print
 
 # Components
-firstAmount=Saldo inicial pagos
+firstAmount=Initial payment amount
 CustomerContactPerson=Contact person
 arrivalTime=Arrival time
 endingTime=Ending time
