@@ -1,12 +1,15 @@
 package org.openxava.test.tests;
 
 import org.openxava.tests.*;
+import org.openxava.util.*;
 
 /**
  * @author Javier Paniza
  */
 
 class ApplicantTest extends ModuleTestBase {
+	
+	private String urlParameters = null;
 	
 	ApplicantTest(String testName) {
 		super(testName, "Applicant")		
@@ -19,6 +22,30 @@ class ApplicantTest extends ModuleTestBase {
 		assertValue "skill.description", "PROGRAMMING"
 		assertValue "skill.language", "JAVA"
 		assertValue "platform", "MULTIPLATFORM"		 
+	}
+	
+	void testWithNoHtmlHead() { 
+		String html = getHtmlPage().getWebResponse().getContentAsString()
+		assertTrue html.contains("html>")
+		assertTrue html.contains("<head>")
+		assertTrue html.contains("</head>")
+		assertTrue html.contains("<body")
+		assertTrue html.contains("</body>")
+		assertTrue html.contains("</html>")
+		urlParameters = "htmlHead=false"
+		resetModule()
+		html = getHtmlPage().getWebResponse().getContentAsString()
+		assertFalse html.contains("html>")
+		assertFalse html.contains("<head>")
+		assertFalse html.contains("</head>")
+		assertFalse html.contains("<body")
+		assertFalse html.contains("</body>")
+		assertFalse html.contains("</html>")
+	}
+	
+	@Override
+	protected String getModuleURL() throws XavaException { 
+		return urlParameters==null?super.getModuleURL():super.getModuleURL() + "?" + urlParameters;
 	}
 			
 }
